# Livedoc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: RELEASE_v0.1.4.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  livedoc.yml
examples/: .livedoc.json
examples/.livedoc/: code_signatures.json
examples/docs/: api.md
examples/go_sample/: calc.go
examples/sample_module/: __init__.py  calc.py
examples/ts_sample/: utils.ts
spec/: code-doc-mapping.md
src/livedoc/: __init__.py  __main__.py  cli.py  config.py
src/livedoc/core/: __init__.py  discovery.py  graph.py  initializer.py  signatures.py
src/livedoc/parsers/: __init__.py  doc_parser.py  go_parser.py  python_parser.py  typescript_parser.py
src/livedoc/report/: __init__.py  reporter.py
tests/: test_cli.py  test_discovery.py  test_init.py  test_parsers.py  test_symbols.py
tests/fixtures/e2e_project/: calc.go
tests/fixtures/e2e_project/docs/: api.md
tests/fixtures/e2e_project/web/: service.ts
