[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "living-doc"
version = "0.1.3"
description = "Living Documentation: link docs to code and check freshness when signatures change"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "LiveDoc" }]
keywords = ["documentation", "living-docs", "code-docs", "maintenance", "typescript", "javascript", "go", "golang"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.1",
    "pre-commit>=3.0",
]

[project.scripts]
livedoc = "livedoc.cli:main"

[project.urls]
Homepage = "https://github.com/baksvell/Livedoc"
Repository = "https://github.com/baksvell/Livedoc"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
